# mlops_course

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  config.yaml  infer.py  pyproject.toml  train.py
.dvc/: config
conf/: config.yaml
data/: creditcard_test.csv.dvc  creditcard_train.csv.dvc
