[tool.poetry]
name = "mlops-course"
version = "0.1.0"
description = "repo for mlops course"
authors = ["Ivan Yakunin <ykunin.ia@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
gdown = "^4.7.1"
pandas = "^2.1.1"
xgboost = "^2.0.0"
scikit-learn = "^1.3.1"
dvc = {extras = ["gdrive"], version = "^3.26.2"}


[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"


[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 90
lines_after_imports = 2


[tool.flake8]
max-line-length = 90
extend_ignore = ['E501']


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
